# hermes

./: .gitignore  pyproject.toml  test.py
calculate/: beam_inter.ipynb  calculus.ipynb  correlated.ipynb  keynua.ipynb  kraus.ipynb  playground.ipynb  quantum_optics.ipynb
lab/: exp.ipynb  exp_cuad.ipynb  inter.ipynb  template.ipynb
lab/cuad/: pream.txt  result_A2_X0_22  result_A2_X90_22  result_X0_10  result_X0_14  result_X0_18  result_X0_2  result_X0_22  result_X0_6  result_X90_10  result_X90_14  result_X90_18  result_X90_2  result_X90_22  result_X90_6
lab/images/: FibraCintura.tif  LaserCintura.tif  pos-0.tif  pos-1-13.tif  pos-1.tif  pos-10.tif  pos-11.tif  pos-12.tif  pos-2.tif  pos-3.tif  pos-4.tif  pos-5.tif  pos-6.tif  pos-7.tif  pos-8.tif  pos-9.tif
lab/images/pos_13/: Navaja_0.csv  Navaja_00.csv  Navaja_000.csv
lab/inter/: TestClase_05Nov2024_HWP3.csv  TestClase_05Nov2024_Nada.csv  TestClase_05Nov2024_QWP.csv  V-nothing.csv  angulos.xlsx  h-h-h.csv  h-q0-h.csv  h-q10-h.csv  h-q15-h.csv  h-q20-h.csv  h-q25-h.csv  h-q30-h.csv  h-q5-h.csv  hwp-hwp-hwp-2.csv  hwp-hwp-hwp.csv  hwp-qwp-hwp quarter 22-5.csv  hwp-qwp-hwp quarter 45.csv  hwp-qwp-hwp quarter 67-5.csv  hwp-qwp-hwp quarter 90.csv  hwp-qwp-hwp.csv
quantum/: ADC_ptpt_2.ipynb  DPC_C3ZNE_Final.ipynb  DPC_ZNE_Pol.ipynb  DepChannel2 (1).ipynb  ZNE_1ST_DPC.ipynb  aws.ipynb  cp_1.ipynb  galvez.ipynb  gamma.ipynb  optics_final.ipynb  optimized_adc.ipynb  primitives.ipynb  results.txt  tomography.ipynb  wave-packet.ipynb
quantum/common/: params.py  qiskit_run.py
quantum/data/: amplitude_damping copy.json  amplitude_damping.json  amplitude_damping_test.json  sample.json
