[tool.poetry]
name = "hermes"
version = "0.1.0"
description = "A project containing many Jypiter file from diverse set of calculations and tests"
authors = ["Josue Villasante <josue.villasante@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
ipython = "^8.13.2"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"
numpy = "1.23"
scipy = "^1.11.2"
setuptools = "^69.0.3"


[tool.poetry.group.calculation.dependencies]
sympy = "^1.11.1"


[tool.poetry.group.quantum.dependencies]
qiskit-experiments = "*"
qiskit-ibm-runtime = "*"
qiskit = {extras = ["visualization"], version = "*"}
qiskit-aer = "*"
quantum-tomography = "*"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.9.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
